created a div class for prfile

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,9 @@
-<p>profile works!</p>
+<div class="profile">
+    <div class = "panel.panel.default">
+        <div class= "panel-heading">
+
+        </div>
+
+    </div>
+
+</div>
