--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -27,9 +27,12 @@
                 <div class="col-sm-3">
                     <div>
                         <p>
-                            <span class="label label-default">{{profile.followers}}Followers</span>
+                            <form>
+                                <span class="label label-default">{{profile.followers}}Followers</span>
                             <span class="label label-primary">{{profile.following}}Following</span>
                             <span class="label label-success">{{profile.public_repos}}Repositories</span>
+                            </form>
+                            
                         
                         <p><a href="{{profile.html_url}}" target="_blank" class="btn btn-success btn-sm"> view profile on github</a>
                         <div class="panel.panel.default">
