added data binding to the search form

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,6 +2,7 @@
     <div>
         <input type="text" class="form-control" placeholder="search username" [(ngModel)]="username" name="username"(keyup)=findProfile()>
     </div>
+    {{username}}
 
 </form>
 
