changes in the README.md

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,6 +3,7 @@
         <input type="text" class="form-control" placeholder="search username" [(ngModel)]="username" name="username"(keyup)=findProfile()>
     </div>
     {{username}}
+    <button class="submit" [(ngModel)]="username" name="username"(keyup)=findProfile()>SEARCH USER</button>
 
 </form>
 
